ADD_SUBDIRECTORY(dds)
ADD_SUBDIRECTORY(lcm)
ADD_SUBDIRECTORY(messenger)

INCLUDE_DIRECTORIES(.
  ${GLIB2_MAIN_INCLUDE_DIR}
  ${GLIB2_INTERNAL_INCLUDE_DIR}
  ${GTHREAD2_MAIN_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(../external/nmea/include)
INCLUDE_DIRECTORIES(lcm)
IF(GPS_FOUND)
INCLUDE_DIRECTORIES(${GPS_INCLUDE_DIR})
ENDIF(GPS_FOUND)

PIXHAWK_EXECUTABLE(px_ping px_ping.cc)
PIXHAWK_LINK_LIBRARIES(px_ping
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
)

PIXHAWK_EXECUTABLE(px_mavlink_bridge_serial px_mavlinkserial.cc)
PIXHAWK_LINK_LIBRARIES(px_mavlink_bridge_serial
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
)

PIXHAWK_EXECUTABLE(px_mavlink_bridge_udp px_udplink.cc)
PIXHAWK_LINK_LIBRARIES(px_mavlink_bridge_udp
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
)

IF(GLIBMM2_FOUND)
IF(SIGC++_FOUND)
IF(RTI_FOUND)
INCLUDE_DIRECTORIES(
  ${GLIBMM2_MAIN_INCLUDE_DIR}
  ${GLIBMM2_INTERNAL_INCLUDE_DIR}
  ${SIGC++_INCLUDE_DIR}
  ${RTI_INCLUDE_DIR}
  ${RTI_INCLUDE_DIR}/ndds
)

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
  IF(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]|x86_64")
    IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
      # Linux 32-bit
      SET(CMAKE_CXX_FLAGS "-DRTI_UNIX -DRTI_LINUX -DRTI_32BIT -m32")
    ELSE(CMAKE_SIZEOF_VOID_P EQUAL 4)
      # Linux 64-bit
      SET(CMAKE_CXX_FLAGS "-DRTI_UNIX -DRTI_LINUX -DRTI_64BIT -m64")
    ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 4)
  ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]|x86_64")
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")

PIXHAWK_EXECUTABLE(px_mavlink_bridge_dds px_mavlink_bridge_dds.cc)
PIXHAWK_LINK_LIBRARIES(px_mavlink_bridge_dds
  dl
  nsl
  rt
  ${OPENCV_CORE_LIBRARY_OPTIMIZED}
  ${RTI_LIBRARIES}
  ${GLIBMM2_LIBRARY}
  ${SIGC++_LIBRARY}
  mavconn_dds
  mavconn_lcm
  mavconn_shm
)
ENDIF(RTI_FOUND)
ENDIF(SIGC++_FOUND)
ENDIF(GLIBMM2_FOUND)

PIXHAWK_EXECUTABLE_CONDITIONAL(px_gpsd CONDITION GPS_FOUND FILES px_gpsd.cc)
PIXHAWK_LINK_LIBRARIES(px_gpsd
  mavconn_lcm
  ${GPS_LIBRARY}
  ${GPS_LIBRARY_OPTIMIZED}
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
)

PIXHAWK_EXECUTABLE(px_imagestreamer px_imagestreamer.cc)
PIXHAWK_LINK_LIBRARIES(px_imagestreamer
  mavconn_lcm
  ${Boost_PROGRAM_OPTIONS_LIBRARY}
  ${OPENCV_HIGHGUI_LIBRARY_OPTIMIZED}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_SYSTEM_LIBRARY}
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
)

IF(VICON_FOUND)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
  IF(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]|x86_64")
    IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
    
      PIXHAWK_EXECUTABLE(px_vicon_bridge PxTransform.cc px_vicon_bridge.cc PxVicon.cc)
      PIXHAWK_LINK_LIBRARIES(px_vicon_bridge
        mavconn_lcm
	${CV_LIBRARY}
	ViconDataStreamSDK_CPP
	${Boost_PROGRAM_OPTIONS_LIBRARY}
      )
        
    ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 4)
  ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]|x86_64")
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
ENDIF(VICON_FOUND)
