INCLUDE_DIRECTORIES(.
  ${GLIB2_MAIN_INCLUDE_DIR}
  ${GLIB2_INTERNAL_INCLUDE_DIR}
  ${GTHREAD2_MAIN_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(
  ${GLIBTOP_INCLUDE_DIR}
)

PIXHAWK_EXECUTABLE(mavconn-sysctrl mavconn-core.cc)
PIXHAWK_LINK_LIBRARIES(mavconn-sysctrl
  mavconn_lcm
  ${GLIB2_LIBRARY}
  ${GTHREAD2_LIBRARY}
  ${GLIBTOP_LIBRARY}
)

ADD_SUBDIRECTORY(watchdog)
